translation-tool/inputs/source_meta/objects/Account_Asset_Attribute__c.object
<CustomObject>
    <description>Account Asset Attribute</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To capture company attributes</description>
        <inlineHelpText>To capture company attributes</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Asset Attributes</relationshipLabel>
        <relationshipName>Account_Asset_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Reference to Asset Objects</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Account Asset Attributes</relationshipLabel>
        <relationshipName>Account_Asset_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_ID__c</fullName>
        <formula>Attribute__r.Master_Attribute_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <formula>Attribute__r.Master_Attribute_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <description>Attribute Value</description>
        <inlineHelpText>Attribute Value</inlineHelpText>
        <label>Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup reference to Master Attribute Object</description>
        <inlineHelpText>Lookup reference to Master Attribute Object</inlineHelpText>
        <label>Attribute</label>
        <referenceTo>Master_Attribute__c</referenceTo>
        <relationshipLabel>Account Asset Attributes</relationshipLabel>
        <relationshipName>Account_Asset_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_premise_Central_DB_ID__c</fullName>
        <description>On-premise Central DB ID</description>
        <externalId>true</externalId>
        <inlineHelpText>On-premise Central DB ID</inlineHelpText>
        <label>On-premise Central DB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Asset Attribute</label>
    <nameField>
        <displayFormat>ACASTATR-{0000000000}</displayFormat>
        <label>Account Asset Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Asset Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>